<resources>
    <string name="app_name">Vidd.io</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButton">Create An Account</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="signupButton">Create An Account</string>
    <string name="alreadyAccountButton">Already Have An Account ?</string>
    <string name="name">Full Name</string>
    <string name="homeOption">Home</string>
    <string name="profile">Profile</string>
    <string name="shareCodeButton">Share</string>
    <string name="joinButton">Join</string>
    <string name="meeting_code">Meeting Code</string>
    <string name="meeting_code_info">Please share this meeting code with your friends to start the video call.</string>
    <string name="aboutOption">About</string>
    <string name="about_app">Vidd.io is a multi-feature web conferencing platform which is used for audio and/or video conferencing.</string>
    <string name="sign_out">Sign Out</string>
    <string name="signout_description">This will allow users who wants to sign out from this application.</string>
    <string name="forgot_password">Forgot / Reset Password</string>
    <string name="forgot_password_description">This will allow users who have forgotten their password to unlock, retrieve, or reset it.</string>
    <string name="delete_account_description">This will removes your account details from the database entirely.</string>
    <string name="delete_account">Delete Account</string>
    <string name="update_account">Update Username</string>
    <string name="update_account_description">This will allow users who wants to update their username or full name.</string>
    <string name="temp_name">Anjaniy Salekar</string>
    <string name="temp_email">anjaniy01salekar@gmail.com</string>
    <string name="loading_dialog">Loading...</string>
</resources>